--- a/styles/style.css
+++ b/styles/style.css
@@ -19,3 +19,19 @@ body {
    top: 50px;
    left: 100px;
 }
+
+.animated-text p {
+	position: absolute;
+	width: 100px;
+	height: 100px;
+	top: 50%;
+	left: 30%;
+}
+.animated-text p:nth-child(2) {
+	top: 50%;
+	left: 50%;
+}
+.animated-text p:nth-child(3) {
+	top: 50%;
+	left: 70%;
+}
