--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,28 @@
 body {
    background-color: #2f477b;
    color: #e6e6e6;
+   font-family: 'Lato', sans-serif;
+   font-weight: 400;
+   padding: 75px 0 100px 0
 }
-.container {
-   
+
+h1, h2 {
+   font-weight: 100;
+}
+
+h1, h2, h3 {
+   word-wrap: break-word;
+}
+h1 {
+   margin-bottom: 75px;
+   font-size: 50px
+}
+h2 {
+   margin-top: 28px;
+   margin-bottom: 15px;
+}
+h3  {
+   margin-bottom: 50px;
 }
 
 .image-container {
@@ -11,15 +30,32 @@ body {
    padding-bottom: 65%;
    background-color: rgba(255, 255, 255, 0.5);
    position: relative;
-   margin-bottom: 50px;
+   margin-bottom: 10px;
+   border-radius: 5px;
 }
-h1 {
-   margin: 100px 0 50px 0;
+
+.btn {
+   padding: 10px;
+   width: 300px;
+   background-color: #4667ad;
+   font-size: 30px;
+   margin: 5px;
+   color: white;
+   transition: .15s;
+   font-weight: 100;
 }
-h2 {
-   margin-top: 28px;
-   margin-bottom: 15px;
+.btn:hover {
+   background-color: #1a2741;
+   color: white;
 }
+.nav-pills li a {
+   transition: .15s
+}
+.nav-pills li a:hover {
+   background-color: #1a2741;
+   color: white;
+}
+
 .image-container img {
    width: 90%;
    left: 5%;
